@@ -5,6 +5,7 @@ import android.os.AsyncTask;
 import android.util.Log;
 
 import com.slate1.interfaces.CheckUserAsyncResponse;
+import com.slate1.util.Connections;
 
 import org.json.JSONArray;
 import org.json.JSONException;
@@ -40,11 +41,8 @@ public class UpdateRegistrationIdAsyncTask extends AsyncTask<Void,Void,Void>{
     protected Void doInBackground(Void... params) {
         StringBuilder builder = null;
         try {
-            String urlStr= "https://slate-muzak.rhcloud.com/updateRegID.php?id="+userId+"&reg_id="+registrationId;
-            //http://slate-muzak.rhcloud.com/updateRegID.php?id=22&reg_id=ABCD
-            URL url = new URL(urlStr);
-            URI uri = new URI(url.getProtocol(), url.getUserInfo(), url.getHost(), url.getPort(), url.getPath(), url.getQuery(), url.getRef());
-            url = uri.toURL();
+            String urlString = new Connections().getUpdateRegIdURL(userId,registrationId);
+            URL url = new URL(urlString);
             HttpURLConnection urlConnection = (HttpURLConnection) url.openConnection();
 
             String line;
@@ -54,8 +52,6 @@ public class UpdateRegistrationIdAsyncTask extends AsyncTask<Void,Void,Void>{
             );
             BufferedReader reader = new BufferedReader(isr);
             while ((line = reader.readLine()) != null) builder.append(line);
-        } catch (URISyntaxException e) {
-            e.printStackTrace();
         } catch (MalformedURLException e) {
             e.printStackTrace();
         } catch (IOException e) {
